--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
                     <option value="#" selected>--chose a card--</option>
                     <option value="b_Visa">Visa Card</option>
                     <option value="b_Master">Master Card</option>
-                    <option value="b_Cradit">Cradit Card</option>
-                    <option value="b_Davit">Davit Card</option>
+                    <option value="b_Cradit">Credit Card</option>
+                    <option value="b_Davit">Devid Card</option>
                 </select>
             </p>
             <p>
