--- a/index.html
+++ b/index.html
@@ -44,13 +44,13 @@
             </p>
             <h3>Payment Information</h3>
             <p class="inp">
-                <label for="idcard">chose a card :</label>
+                <label for="idcard">select a card :</label>
                 <select name="b_card" id="idcard" required>
-                    <option value="#" selected>--chose a card--</option>
+                    <option value="#" selected>--select a card--</option>
                     <option value="b_Visa">Visa Card</option>
                     <option value="b_Master">Master Card</option>
                     <option value="b_Cradit">Credit Card</option>
-                    <option value="b_Davit">Devid Card</option>
+                    <option value="b_Davit">Debid Card</option>
                 </select>
             </p>
             <p>
