--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <option value="b_Visa">Visa Card</option>
                     <option value="b_Master">Master Card</option>
                     <option value="b_Cradit">Credit Card</option>
-                    <option value="b_Davit">Debid Card</option>
+                    <option value="b_Davit">Debit Card</option>
                 </select>
             </p>
             <p>
