--- a/index.html
+++ b/index.html
@@ -18,25 +18,25 @@
             <a id="id_u_info">User Information</a>
             <p>
                 <label for="idname">Name : *</label>
-                <input type="text" name="b_name" id="idname" value="sahina karki" required />
+                <input type="text" name="b_name" id="idname" required />
             </p>
             <fieldset class="inp">
                 male<input type="radio" name="b_gender" id="idmale" required />
-                female<input type="radio" name="b_gender" id="idfemale" checked/>
+                female<input type="radio" name="b_gender" id="idfemale"/>
                 others<input type="radio" name="b_gender" id="idothers" />
                 <legend class="inp" id="_gender">Gender*</legend>
             </fieldset>
             <p>
                 <label for="idaddress">Adress : *</label>
-                <input type="text" name="b_name" id="idaddress" value="Damak jhapa nepal" required />
+                <input type="text" name="b_name" id="idaddress" required />
             </p>
             <p>
                 <label for="idabout">About you :</label>
-                <textarea name="b_adress" id="idabout" cols="30" rows="10">world's most beautiful</textarea>
+                <textarea name="b_adress" id="idabout" cols="30" rows="10"></textarea>
             </p>
             <p>
                 <label for="idmail">Email : *</label>
-                <input type="email" name="b_mail" id="idmail" value="sahina7802@gmail.com" required>
+                <input type="email" name="b_mail" id="idmail" required>
             </p>
             <p>
                 <label for="idpin">pincode : *</label>
